<resources>
    <string name="app_name">ApptunixSample</string>
    <string name="calculated_price">Calculated Price</string>
    <string name="choose_timing">Choose Timing</string>
    <string name="quantity_kg">Quantity-KG</string>
    <string name="save">Save</string>
    <string name="choose_fat">Choose Fat</string>
    <string name="place_order">Place Order</string>
    <string name="enter_milk_quantity">Enter Milk Quantity</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_order">Create Order</string>
    <string name="view_orders">View Orders</string>

    <string-array name="time_options">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>
    <string-array name="fat_options">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="total_no_of_orders">Total No Of Orders</string>
</resources>